<resources>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_head">Fuel Logs</string>
    <string name="user_head">User Details</string>
    <string name="map">Fuel Map</string>
    <string name="user">User</string>
    <string name="app_name">FuelFinder</string>
    <string name="app_title_first">FUEL</string>
    <string name="app_title_second">FINDER</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="typeButtonText">Type</string>
    <string name="scanButtonText">Scan</string>
    <string name="addNewLogLabelText">Add a new log</string>
    <string name="backButtonScreenReaderText">BackText</string>
    <string name="hiLabelText">Hi,</string>
    <string name="monthly_summary_text">Monthly Summary</string>
    <string name="log_review">Log Review</string>
    <string name="date">Date</string>
    <string name="enter_log_details">Enter Log Details</string>
    <string name="jan_01_2023">Jan 01, 2023</string>
    <string name="time">Time</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="total_cost">Total Cost</string>
    <string name="refill_capacity">Gallons Purchased</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="odometer">Odometer</string>
    <string name="fuel_economy">Fuel Economy</string>
    <string name="fuel_station">Fuel Station</string>
    <string name="review">Review</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Fuel Finder\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="maps">Maps</string>
    <string name="name_header">Name:</string>
    <string name="email_header">Email:</string>
    <string name="edit">Edit</string>
    <string name="delete_button">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_action_bar_text">Scan Log Details</string>
</resources>