<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLogActivity">

    <ImageView
        android:id="@+id/BackButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/backButtonScreenReaderText"
        android:src="@drawable/baseline_arrow_back_24"
        app:tint='@color/orange_red' />

    <TextView
        android:id="@+id/addNewLogLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/BackButton"
        android:layout_toRightOf="@id/BackButton"
        android:text="@string/addNewLogLabelText"
        android:textColor="@color/orange_red"
        android:textSize="35sp"
        android:textStyle="italic" />


    <ImageView
        android:id="@+id/notepadImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_edit_note_24"
        app:tint="@color/orange_red"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/addNewLogLabel"
        android:layout_marginVertical="100dp"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/ScanButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/scanButtonText"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_below="@id/notepadImage"
        android:backgroundTint="@color/orange_red"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/TypeButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/typeButtonText"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_below="@id/ScanButton"
        android:backgroundTint="@color/orange_red"
        android:textColor="@color/white"
        />

</RelativeLayout>