<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/user_head"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:textColor="@color/orange_red"
        android:textSize="35sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="Name:"
        android:layout_marginLeft="20dp"
        android:textColor="@color/orange_red"
        android:textSize="25sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        android:layout_toEndOf="@+id/name_header"
        android:text="@string/user"
        android:textSize="24sp"
        android:textStyle="italic"
        android:enabled="false"/>


    <TextView
        android:id="@+id/email_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:text="Email:"
        android:layout_marginLeft="20dp"
        android:textColor="@color/orange_red"
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_below="@id/name_header"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/email_header"
        android:layout_below="@id/name_header"
        android:layout_marginVertical="30dp"
        android:textSize="24sp"
        android:text="@string/e_mail_address"
        android:textStyle="italic"
        android:enabled="false" />


    <Button
        android:id="@+id/edit"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="Edit"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/orange_red"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/sign_out"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/orange_red"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:layout_below="@+id/edit"
        />

    <Button
        android:id="@+id/del"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="Delete"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/orange_red"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:layout_below="@+id/sign_out"
        />

    <Button
        android:id="@+id/done"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/done"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/orange_red"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:visibility="invisible"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/navbar"
        app:itemIconTint="@drawable/bottom_navbar_tabs"
        app:itemTextColor="@drawable/bottom_navbar_tabs"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>